fixed pregrade overflow bugs in reviews and single product

--- a/react-app/src/components/GetOneProduct/GetOneProduct.css
+++ b/react-app/src/components/GetOneProduct/GetOneProduct.css
@@ -23,6 +23,9 @@
     border-radius: 20px;
     padding: 30px;
     margin: 10px 10px 10px 10px;
+    overflow: auto;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .shop-name {
