--- a/react-app/src/components/GetProductReviews/GetProductReviews.css
+++ b/react-app/src/components/GetProductReviews/GetProductReviews.css
@@ -14,6 +14,9 @@
     border: .5px solid #BF9E87;
     border-radius: 20px;
     gap: 3px;
+    overflow: auto;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .reviews-user {
